fix(eww): icons bleeding outside of their monospace size

--- a/modules/environment/desktop/hyprland/eww/eww/eww.scss
+++ b/modules/environment/desktop/hyprland/eww/eww/eww.scss
@@ -70,8 +70,7 @@ $light_crust: #dce0e8;
 
 * {
   all: unset;
-  font-family: feather;
-  font-family: DaddyTimeMono NF;
+  font-family: "Fira Code Nerd Font Mono";
 }
 
 /** tooltip!! **/
